--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             // Redirect to the main HTML file after the transition
             setTimeout(function () {
-                window.location.href = 'index.html';
+                window.location.href = 'main.html';
             }, 1500); // Adjust the delay time to match the transition duration
         }, 2000); // Adjust the delay time as needed (in milliseconds)
     </script>
